--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
@@ -1,8 +1,30 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Estudiante</PageTitle>
 
-<h1>Tarea #2 Aplicada 1 "Registro de Clientes"</h1>
+<h1 class="text-primary fw-bold">"Programaci&oacute;n Aplicada 1"</h1>
 
-Delfry Paulino Ortega (2021-0609)
+<div class="container mt-5">
+    <div class="row">
+        <div class="card-footer col-md-3 shadow bg-dark">
+            <img src="/bootstrap/pre.jpeg" alt="Imagen de perfil" class="img-fluid rounded-start" />
+        </div>
+        <div class="col-md-8">
+            <h1 class="fw-bold">@Nombre</h1>
+            <p><strong class="text-primary">Email:</strong> @Email</p>
+            <p><strong class="text-primary">Email Institucional:</strong> @EmailInstitucional</p>
+            <p><strong class="text-primary">Celular:</strong> @Celular</p>
+            <p><strong class="text-primary">Matrícula:</strong> @Matricula</p>
+            <p><strong class="text-primary">Intereses:</strong> @Intereses</p>
+        </div>
+    </div>
+</div>
 
+@code {
+    string Nombre = "Delfry Paulino Ortega";
+    string Email = "delfrypaulino123@gmail.com";
+    string EmailInstitucional = "delfry_paulino@ucne.edu.do";
+    string Celular = "829-790-3950";
+    string Matricula = "(2021-0609)";
+    string Intereses = "Me apasiona la programación y la idea de seguir aprendiendo más de las nuevas tecnologías.";
+}
