--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Registro/R_Clientes.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Registro/R_Clientes.razor
@@ -1,7 +1,7 @@
 ﻿@page "/RClientes"
 @page "/RClientes/{ClienteId:int}"
 @rendermode InteractiveServer
-@inject ClientesBLL clientesBLL;
+@inject ClientesService clientesBLL;
 
 <PageTitle>Registro Cliente</PageTitle>
 
