--- a/TareaPrioridades/TareaPrioridades/Components/_Imports.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/_Imports.razor
@@ -10,5 +10,5 @@
 @using TareaPrioridades.Components
 @using TareaPrioridades.Models
 @using TareaPrioridades.DAL
-@using TareaPrioridades.BLL
+@using TareaPrioridades.Services
 
