--- a/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
@@ -10,17 +10,12 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div> 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="RPrioridades">
-                <span class="bi bi-archive-fill d-flex align-items-center justify-content-center fs-5" aria-hidden="true"></span> Registro Prioridades
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Estudiante
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="CPrioridades">
-                <span class="bi bi-folder-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Consulta Prioridades
+            <NavLink class="nav-link" href="IndexPrioridades">
+                <span class="bi bi-folder-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Prioridades Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
