Pagina de clientes y modelos Sistemas y Tickets

--- a/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
@@ -19,13 +19,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="RClientes">
-                <span class="bi bi-person-plus-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Registro Clientes
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="CClientes">
-                <span class="bi bi-person-vcard d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Consulta Clientes
+            <NavLink class="nav-link" href="IndexClientes">
+                <span class="bi bi-person-plus-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Clientes Home
             </NavLink>
         </div>
     </nav>
