--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
@@ -2,9 +2,10 @@
 
 <PageTitle>Estudiante</PageTitle>
 
-<h1 class="text-primary fw-bold">"Programaci&oacute;n Aplicada 1"</h1>
-
-<div class="container mt-5">
+<div class="card-header">
+    <h1 class="text-primary fw-bold">"Programaci&oacute;n Aplicada 1"</h1>
+</div>
+<div class="card-header container mt-5 shadow">
     <div class="row">
         <div class="card-footer col-md-3 shadow bg-dark">
             <img src="/bootstrap/pre.jpeg" alt="Imagen de perfil" class="img-fluid rounded-start" />
