--- a/TareaPrioridades/TareaPrioridades/Components/Pages/PrioridadesPages/Create.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/PrioridadesPages/Create.razor
@@ -12,13 +12,13 @@
         </div>
         <div class="card-body bg-light">
             <div class="col-4">
-                <label>Descripci&oacute;n</label>
+                <label class="bi bi-card-text">Descripci&oacute;n</label>
                 <InputText @bind-Value="prioridades.Descripcion" @oninput="MensajeGuardar" class="form-control" ></InputText>
                 <ValidationMessage For="@(() => prioridades.Descripcion)"/>
             </div>
             <div>
                 <div class="row">
-                    <label>Dias Compromiso</label>
+                    <label class="bi bi-calendar2-day mt-1">Dias Compromiso</label>
                 </div>
                 <InputNumber @bind-Value="prioridades.DiasCompromiso" @oninput="MensajeGuardar" min="0" class="number-input"></InputNumber>
                 <ValidationMessage For="@(() => prioridades.DiasCompromiso)"/>
@@ -52,18 +52,18 @@
 
     public void Nuevo()
     {
-        this.prioridades = new Prioridades();
+        prioridades = new Prioridades();
         MensajeGuardar();
     }
 
     public async Task Guardar()
     {
-        var guardo = await prioridadesService.Guardar(this.prioridades);
+        var guardo = await prioridadesService.Guardar(prioridades);
         if(guardo)
         {
             resultado = 1;
             mensaje = "Registro Guardado";
-            this.prioridades = new Prioridades();
+            prioridades = new Prioridades();
         }
         else
         {
