Paginas de sistema de tickets y sistema completo

--- a/TareaPrioridades/TareaPrioridades/Components/Pages/ClientesPages/Edit.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/ClientesPages/Edit.razor
@@ -113,7 +113,7 @@
         else
         {
             resultado = 2;
-            mensaje = "Registro No Guardado Descripción Ya Existe";
+            mensaje = "Registro No Guardado";
         }
     }
 
