--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
@@ -2,23 +2,27 @@
 
 <PageTitle>Estudiante</PageTitle>
 
-<div class="card-header">
-    <h1 class="text-primary fw-bold">"Programaci&oacute;n Aplicada 1"</h1>
-</div>
-<div class="card-header container mt-5 shadow">
-    <div class="row">
-        <div class="card-footer col-md-3 shadow bg-dark">
-            <img src="/bootstrap/pre.jpeg" alt="Imagen de perfil" class="img-fluid rounded-start" />
-        </div>
-        <div class="col-md-8">
-            <h1 class="fw-bold">@Nombre</h1>
-            <p><strong class="text-primary">Email:</strong> @Email</p>
-            <p><strong class="text-primary">Email Institucional:</strong> @EmailInstitucional</p>
-            <p><strong class="text-primary">Celular:</strong> @Celular</p>
-            <p><strong class="text-primary">Matrícula:</strong> @Matricula</p>
-            <p><strong class="text-primary">Intereses:</strong> @Intereses</p>
+
+<div class="card-header container shadow">
+    <div class="card-header">
+        <h1 class="text-primary fw-bold">"PROGRAMACI&Oacute;N APLICADA I"</h1>
+    </div>
+    <div class="mt-5">
+        <div class="row">
+            <div class="card-footer col-md-3 shadow bg-dark">
+                <img src="/bootstrap/pre.jpeg" alt="Imagen de perfil" class="img-fluid rounded-start" />
+            </div>
+            <div class="col-md-8">
+                <h1 class="fw-bold">@Nombre</h1>
+                <p><strong class="text-primary">Email:</strong> @Email</p>
+                <p><strong class="text-primary">Email Institucional:</strong> @EmailInstitucional</p>
+                <p><strong class="text-primary">Celular:</strong> @Celular</p>
+                <p><strong class="text-primary">Matrícula:</strong> @Matricula</p>
+                <p><strong class="text-primary">Intereses:</strong> @Intereses</p>
+            </div>
         </div>
     </div>
+   
 </div>
 
 @code {
