--- a/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
@@ -14,13 +14,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="IndexPrioridades">
-                <span class="bi bi-folder-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Prioridades Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="IndexClientes">
-                <span class="bi bi-person-plus-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Clientes Home
+            <NavLink class="nav-link" href="IndexTickets">
+                <span class="bi bi-ticket-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Sistema de Tickets
             </NavLink>
         </div>
     </nav>
