--- a/TareaPrioridades/TareaPrioridades/Components/Pages/ClientesPages/Index.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/ClientesPages/Index.razor
@@ -53,6 +53,9 @@
                     <a href="/RClientes" class="btn btn-success bi bi-file-earmark-diff-fill">Crear</a>
                 </div>
             }
+            <div class="col d-flex justify-content-end">
+                <a href="/IndexTickets" class="btn btn-primary bi bi-ticket-fill"> Tickets</a>
+            </div>
         </div>
 
     </div>
