Formateo la fecha

--- a/TareaPrioridades/TareaPrioridades/Components/Pages/ClientesPages/Index.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/ClientesPages/Index.razor
@@ -2,7 +2,7 @@
 @rendermode InteractiveServer
 @inject ClientesService clientesService;
 
-<PageTitle>Clientes</PageTitle>
+<PageTitle>Clientes Home</PageTitle>
 
 <div class="card bg-dark">
     <div class="card-header bg-dark d-flex align-items-center justify-content-center">
