--- a/TareaPrioridades/TareaPrioridades/Components/Pages/TicketsPages/Details.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/TicketsPages/Details.razor
@@ -19,7 +19,7 @@
                 <p><strong class="text-primary bi bi-key">-ID Cliente:</strong> @tickets.ClienteId</p>
                 <p><strong class="text-primary bi bi-key">-ID Prioridad:</strong> @tickets.PrioridadId</p>
                 <p><strong class="text-primary bi bi-key">-ID Sistema:</strong> @tickets.SistemaId</p>
-                <p><strong class="text-primary bi bi-calendar-date">-Fecha:</strong> @tickets.Fecha</p>
+                <p><strong class="text-primary bi bi-calendar-date">-Fecha:</strong> @tickets.Fecha.ToString("dd/MM/yyyy")</p>
                 <p><strong class="text-primary bi bi-card-text">-Asunto:</strong> @tickets.Asunto</p>
                 <p><strong class="text-primary bi bi-person-badge-fill">-Solicitado Por:</strong> @tickets.Solicitadopor</p>
                 <p><strong class="text-primary bi bi-card-text">-Descripci&oacute;n:</strong> @tickets.Descripcion</p>
