--- a/TareaPrioridades/TareaPrioridades/Components/Pages/PrioridadesPages/Index.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/PrioridadesPages/Index.razor
@@ -48,7 +48,7 @@
                 </div>
             }
             <div class="col d-flex justify-content-end">
-                <a href="/IndexTickets" class="btn btn-primary bi bi-ticket-fill"> Clientes</a>
+                <a href="/IndexTickets" class="btn btn-primary bi bi-ticket-fill"> Tickets</a>
             </div>
         </div>
     </div>
