--- a/TareaPrioridades/TareaPrioridades/Components/Pages/SistemasPages/Create.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/SistemasPages/Create.razor
@@ -12,13 +12,13 @@
         </div>
         <div class="card-body bg-light">
             <div class="col-4">
-                <label class="bi bi-card-text">Nombre</label>
+                <label class="fw-bold bi bi-card-text"> Nombre</label>
                 <InputText @bind-Value="sistemas.NombreSistema" @oninput="MensajeGuardar" class="form-control"></InputText>
                 <ValidationMessage For="@(() => sistemas.NombreSistema)" />
             </div>
             <div class="col-6">
                 <div class="row">
-                    <label class="bi bi-card-text mt-1">Descripci&oacute;n</label>
+                    <label class="fw-bold bi bi-card-text mt-1"> Descripci&oacute;n</label>
                 </div>
                 <InputText @bind-Value="sistemas.DescripcionSistema" @oninput="MensajeGuardar" class="form-control"></InputText>
                 <ValidationMessage For="@(() => sistemas.DescripcionSistema)" />
@@ -68,7 +68,7 @@
         else
         {
             resultado = 2;
-            mensaje = "Registro No Guardado";
+            mensaje = "Registro No Guardado Ya Existe";
         }
     }
 
