--- a/TareaPrioridades/TareaPrioridades/Components/Pages/TicketsPages/Index.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/TicketsPages/Index.razor
@@ -107,7 +107,7 @@
         </table>
 
         <div class="card-header text-white">
-            <p>Cantidad de Prioridades: @ListaTickets.Count</p>
+            <p>Cantidad de Tickets: @ListaTickets.Count</p>
         </div>
     </div>
 </div>
