--- a/TareaPrioridades/TareaPrioridades/Components/Pages/SistemasPages/Index.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/SistemasPages/Index.razor
@@ -84,7 +84,7 @@
         </table>
 
         <div class="card-header text-white">
-            <p>Cantidad de Prioridades: @ListaSistemas.Count</p>
+            <p>Cantidad de Sistemas: @ListaSistemas.Count</p>
         </div>
     </div>
 </div>
